avoiding conditionals